TU-T2896 remove pseudo element from list header because it cause issues with flex alignment

--- a/src/app/components/list/list.component.scss
+++ b/src/app/components/list/list.component.scss
@@ -242,12 +242,6 @@
     }
 
     .fs-list-header {
-      &:after {
-        content: "";
-        clear: both;
-        display: table;
-      }
-
       .heading-container {
         font-weight: 600;
         font-size: 18px;
